Fix muted black key color for Contrast theme

--- a/src/contrast-theme.scss
+++ b/src/contrast-theme.scss
@@ -715,7 +715,7 @@ $headerDarkBlue: #0f182d;
 
     .piano-keys {
       .pitch-class {
-        background-color: $muteDarkGray;
+        background-color: #303033;
       }
       .white-key {
         background-color: $muteGray !important;
